this is after filtering

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -38,6 +38,9 @@
        From: {{rows[d]["TicketFrom"]}}
        </p>
        <p style="color: white">
+       Transport: {{rows[d]["transport"]}}
+       </p>
+       <p style="color: white">
        Name: {{rows[d]["user_Name"]}}
        </p>
        <p style="color: white">
