--- a/templates/PostAdd.html
+++ b/templates/PostAdd.html
@@ -7,6 +7,12 @@
 <div class="form-style-2-heading">Post new ad</div>
 <form method="post" action="/add">
 
+    <label for="inp_transport"><span>Transport </span><select class="select-field" name="inp_transport">
+<option value="Bus">Bus</option>
+<option value="Train">Train</option>
+<option value="Airplane">Airplane</option>
+</select></label>
+
     <label for="inputFrom"><span>From </span><select name="inputFrom" class="select-field">
 <option value="Dhaka">Dhaka</option>
 <option value="Chattagram">Chattagram</option>
