--- a/static/article.css
+++ b/static/article.css
@@ -31,7 +31,7 @@ body{
 			text-decoration: none;
                         width:90%;
 			padding: 1rem;
-			color:#0101DF;
+			color: #0B2161;
 			box-shadow: 0 1px 3px rgba(0,0,0, .12), 0 1px 2px rgba(0,0,0, .24);
 			display: inline-block;
 
