--- a/static/style.css
+++ b/static/style.css
@@ -1,21 +1,4 @@
 body            { font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
                   margin-top: 50px;
                   margin-left: 20px;
-                  background-color: DarkSeaGreen }
-
-th {
-  padding: 20px;
-  text-align: center;
-  background-color: DodgerBlue;
-  color: white;
-}
-
-td{
-  padding: 20px;
-  text-align: center;
-}
-
-tr:nth-child(odd)		{ background-color:#eee; }
-tr:nth-child(even)	{ background-color:#fff; }
-
-tr:hover            { background-color: #ffff99;}
+                  background-color: #0040ff }
