--- a/templates/tbl.html
+++ b/templates/tbl.html
@@ -1,29 +1,32 @@
 <doctype html>
 <title>Exchangia</title>
 <head>
-<link rel=stylesheet type=text/css href="../static/style.css">
-<link rel=stylesheet type=text/css href="../static/article.css">
-<p style="color: white; margin-left: 200px">
+<link href="../static/style.css" rel="stylesheet" type="text/css">
+<link href="../static/article2.css?1422585377" rel="stylesheet" type="text/css">
+<p style="color: white; margin-left: 800px">
        <h1>Exchangia</h1>
        </p>
 </head>
 <body>
 {% if logged==1 %}
-<p><a href="{{ url_for('.add_user_view') }}"> Post new ticket add </a></p>
+<p><a href="{{ url_for('.add_user_view') }}" style="color:#ffffff;"> Post new ticket ad </a></p>
+<p><a href="{{ url_for('.log_out') }}" style="color:#ffffff;"> Log out </a></p>
 {% elif logged==0 %}
 <div class="text-center w-full">
-						<a class="txt1" href="http://127.0.0.1:5000/loginpage">
+						<a class="txt1" href="http://127.0.0.1:5000/loginpage" style="color:#ffffff;">
 							Log In
 							<i class="fa fa-long-arrow-right"></i>
 						</a>
 					</div>
 <div class="text-center w-full">
-						<a class="txt1" href="http://127.0.0.1:5000/signuppage">
+						<a class="txt1" href="http://127.0.0.1:5000/signuppage" style="color:#ffffff;">
 							Sign Up
 							<i class="fa fa-long-arrow-right"></i>
 						</a>
 					</div>
 {% endif %}
+<p><a href="{{ url_for('.filtering') }}" style="color:#ffffff;"> Filter Ads </a></p>
+
 <div class=page>
   <h1>Available Ticket ads</h1>
     
@@ -35,12 +38,15 @@
 
 	{% for d in li %}
 
-    <a title="Post" style="background-color: #F5A9A9">
+    <a style="background-color: #3399ff" title="Post">
 <article>
 <div>
        <div style="float: left; margin-left:30px; width:50%" >
        <p style="color: white">
        From: {{rows[d]["TicketFrom"]}}
+       </p>
+       <p style="color: white">
+       Transport: {{rows[d]["transport"]}}
        </p>
        <p style="color: white">
        Name: {{rows[d]["user_Name"]}}
