--- a/templates/tbl.html
+++ b/templates/tbl.html
@@ -1,34 +1,32 @@
-<doctype html>
+<html html>
 <title>Exchangia</title>
 <head>
 <link href="../static/style.css" rel="stylesheet" type="text/css">
 <link href="../static/article2.css?1422585377" rel="stylesheet" type="text/css">
-<p style="color: white; margin-left: 800px">
-       <h1>Exchangia</h1>
-       </p>
+    <h1 style="color: white; margin-left: 500px">Exchangia</h1>
 </head>
 <body>
 {% if logged==1 %}
-<p><a href="{{ url_for('.add_user_view') }}" style="color:#ffffff;"> Post new ticket ad </a></p>
-<p><a href="{{ url_for('.log_out') }}" style="color:#ffffff;"> Log out </a></p>
+<p><a href="{{ url_for('.add_user_view') }}" style="color:#ffffff; margin-left:800px"> Post new ticket ad </a></p>
+<p><a href="{{ url_for('.log_out') }}" style="color:#ffffff; margin-left:800px"> Log out </a></p>
 {% elif logged==0 %}
 <div class="text-center w-full">
-						<a class="txt1" href="http://127.0.0.1:5000/loginpage" style="color:#ffffff;">
+						<a class="txt1" href="http://127.0.0.1:5000/loginpage" style="color:#ffffff; margin-left:800px">
 							Log In
 							<i class="fa fa-long-arrow-right"></i>
 						</a>
 					</div>
 <div class="text-center w-full">
-						<a class="txt1" href="http://127.0.0.1:5000/signuppage" style="color:#ffffff;">
+						<a class="txt1" href="http://127.0.0.1:5000/signuppage" style="color:#ffffff; margin-left:800px">
 							Sign Up
 							<i class="fa fa-long-arrow-right"></i>
 						</a>
 					</div>
 {% endif %}
-<p><a href="{{ url_for('.filtering') }}" style="color:#ffffff;"> Filter Ads </a></p>
+<p><a href="{{ url_for('.filtering') }}" style="color:#ffffff; margin-left:400px"> Filter Ads </a></p>
 
 <div class=page>
-  <h1>Available Ticket ads</h1>
+  <h1 style="color:#ffffff; margin-left:400px">Available Ticket ads</h1>
     
 </div>
 
@@ -38,7 +36,7 @@
 
 	{% for d in li %}
 
-    <a style="background-color: #3399ff" title="Post">
+    <a style="background-color: #3399ff; margin-left:250px" title="Post">
 <article>
 <div>
        <div style="float: left; margin-left:30px; width:50%" >
@@ -72,8 +70,16 @@
        Tickets: {{rows[d]["Tickets"]}}
        </p>
        <p style="color: white">
-       Price: {{rows[d]["TicketPrice"]}}
-       </p></div>
+       Tickets: {{rows[d]["TicketPrice"]}}
+       </p>
+
+       {% if logged==1 %}
+         {% if rows[d]["user_Email"] == Uniemail %}
+           <p style="color: white"> Delete </p>
+         {% endif %}
+       {% endif %}
+
+       </div>
 
 			</div>	
 			</article>
